[project]
name = "dayuanlib"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.15"
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dayuanlib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dayuanlib"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
