[project]
name = "dayuanlib"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.15"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]


dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dayuanlib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dayuanlib"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
